--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,27 +1,19 @@
-<!DOCTYPE html>
-<html class="grid" lang="is">
-
-<head>
-  <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta charset="utf-8">
-  <link href="styles/styles.css" rel="stylesheet">
-  <title>Fræðslumyndbandaleigan</title>
-</head>
+<body>
 
 <header class="header" id="header">
   <h1 class="header__h1">Fræðslumyndbandaleigan</h1>
 </header>
 
-<main class="videos">
+<main class="page__layout">
 
   <h2 class="videos__title">Nýleg Myndbönd</h2>
   <div class="videos__row">
 
     <div class="videos__col">
-      <a class="video__card" href="video.html">
+      <a class="video__card" href="/video">
         <div class="video">
           <div class="video__image">
-            <img class="video__img" src="./public/videos/bunny.png" alt="">
+            <img class="video__img" src="videos/bunny.png" alt="">
             <div class="video__duration"><b>420:69</b></div>
           </div>
         </div>
@@ -34,27 +26,10 @@
       </a>
     </div>
     <div class="videos__col">
-      <a class="video__card" href="video.html">
+      <a class="video__card" href="/video">
         <div class="video">
           <div class="video__image">
-            <img class="video__img" src="./public/videos/bunny.png" alt="">
-            <div class="video__duration"><b>420:69</b></div>
-          </div>
-        </div>
-        <div>
-          <div class="video__content">
-            <h3 class="video__title">Kanína á kreik</h3>
-            <p class="video__age"> Fyrir 69 árum síðan</p>
-          </div>
-        </div>
-      </a>
-    </div>
-
-    <div class="videos__col">
-      <a class="video__card" href="video.html">
-        <div class="video">
-          <div class="video__image">
-            <img class="video__img" src="./public/videos/bunny.png" alt="">
+            <img class="video__img" src="videos/bunny.png" alt="">
             <div class="video__duration"><b>420:69</b></div>
           </div>
         </div>
@@ -68,10 +43,27 @@
     </div>
 
     <div class="videos__col">
-      <a class="video__card" href="video.html">
+      <a class="video__card" href="/video">
         <div class="video">
           <div class="video__image">
-            <img class="video__img" src="./public/videos/bunny.png" alt="">
+            <img class="video__img" src="videos/bunny.png" alt="">
+            <div class="video__duration"><b>420:69</b></div>
+          </div>
+        </div>
+        <div>
+          <div class="video__content">
+            <h3 class="video__title">Kanína á kreik</h3>
+            <p class="video__age"> Fyrir 69 árum síðan</p>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="videos__col">
+      <a class="video__card" href="/video">
+        <div class="video">
+          <div class="video__image">
+            <img class="video__img" src="videos/bunny.png" alt="">
             <div class="video__duration"><b>420:69</b></div>
           </div>
         </div>
@@ -88,7 +80,7 @@
       <a class="video__card" href="/1">
         <div class="video">
           <div class="video__image">
-            <img class="video__img" src="./public/videos/drone.png" alt="">
+            <img class="video__img" src="videos/drone.png" alt="">
             <div class="video__duration">69:69</div>
           </div>
           <div class="video__content">
@@ -121,5 +113,4 @@
 
 </main>
 <script src="src/app.js"></script>
-
-</html>
+</body>
