--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -102,6 +102,7 @@ $gutter: 20px;
 /* In case the last line contains 2 videos*/
 .spacer {
   display: none;
+  height: 0px;
 }
 
 .video__duration {
