--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -5,10 +5,12 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta charset="utf-8">
     <title><%- title %></title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
     <%- body %>
+    <%- include ('partials/footer.ejs') %>
 </body>
+
 
 </html>
