--- a/public/css/video__styles.scss
+++ b/public/css/video__styles.scss
@@ -1,24 +1,37 @@
-//sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
-$video-font: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+$video-font: 'Franklin Gothic Medium',
+'Arial Narrow',
+Arial,
+sans-serif;
+$font-size: 18px;
+$page-size: 1240px;
 
 .video__page {
-  width: 100vw;
-  max-width: 1240px;
+  width: 100%;
+  max-width: $page-size;
   margin: 0 auto;
   font-family: $video-font;
-  font-size: 18px;
+  font-size: $font-size;
 }
+
 .player {
-max-width: 100%;
+  width: 100%;
 }
 
 .video__header__h1 {
   font-size: 2.6rem;
 }
 
+.video__page__description {
+  margin-left: 2rem;
+}
+
 @media screen and (min-width: 500px) {
   .video__page {
-    width: 90vw;
+    width: 90%;
+  }
+
+  .video__page__description {
+    margin: 2rem 0 2rem 0;
   }
 }
 
@@ -27,14 +40,17 @@ max-width: 100%;
 }
 
 a {
-  color: inherit; /* blue colors for links too */
-  text-decoration: inherit; /* no underline */
- & :hover {
-  color: blue;
- }
+  color: inherit;
+  /* blue colors for links too */
+  text-decoration: inherit;
+
+  /* no underline */
+  & :hover {
+    color: blue;
+  }
 }
 
-.video__description{
+.video__description {
   margin: 2rem 0 2rem 0;
 }
 
@@ -42,4 +58,5 @@ a {
   font-size: 1.3rem;
   margin: 2rem 0 2rem 0;
 }
+
 //sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
