--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -5,7 +5,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta charset="utf-8">
     <title><%- title %></title>
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="../css/styles.css" rel="stylesheet">
 </head>
 <body>
     <%- body %>
