--- a/src/views/video.ejs
+++ b/src/views/video.ejs
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <% } else { %>
-            <H2>Video not found</H2>
+            <H2><%- title %></H2>
             <div class="back__link">
                 <a href="/">
                     <p>Til Baka<p>
