--- a/public/css/config.scss
+++ b/public/css/config.scss
@@ -1,2 +1,16 @@
 $max-width: 1200px;
 $gutter: 20px;
+$pc-page: 800px;
+$tablet-page: 600px;
+$index-font: 'Franklin Gothic Medium',
+  'Arial Narrow',
+  arial,
+  sans-serif;
+$video-font: 'Franklin Gothic Medium',
+  'Arial Narrow',
+  arial,
+  sans-serif;
+$font-size: 18px;
+$blue: rgb(0, 0, 255);
+$white: rgb(255, 245, 223);
+$time-background: rgba(0, 0, 0, 0.5);
