--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -21,8 +21,8 @@
                     <div class="video">
                       <div class="video-image">
                         <img class="video-img" src="<%- vid.poster %>" alt="<%- vid.title %>">
-                        <div class="video-duration"><b>
-                            <%- helper.timeStamp(vid.duration) %>
+                        <div class="video-duration"><b class="stamp">
+                          <%- helper.timeStamp(vid.duration) %>
                           </b></div>
                       </div>
                     </div>
