--- a/public/css/video__styles.scss
+++ b/public/css/video__styles.scss
@@ -1,16 +1,10 @@
-$video-font: 'Franklin Gothic Medium',
-  'Arial Narrow',
-  arial,
-  sans-serif;
-$font-size: 18px;
-$page-size: 1240px;
-$blue: rgb(0, 0, 255);
+@import 'config';
 
 .video-page {
   font-family: $video-font;
   font-size: $font-size;
   margin: 0 auto;
-  max-width: $page-size;
+  max-width: $pc-page;
   width: 100%;
 }
 
@@ -18,15 +12,11 @@ $blue: rgb(0, 0, 255);
   width: 100%;
 }
 
-.video-header-h1 {
-  font-size: 2.6rem;
-}
-
 .video-page-description {
   margin-left: 2rem;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: $tablet-page) {
   .video-page {
     width: 90%;
   }
