--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,2 +1,3 @@
 <footer style="text-align: center;margin:0 0 1em 0;">
-    &copy; Fræðslumyndbandaleigan</footer>
+  &copy; Fræðslumyndbandaleigan
+</footer>
